# search-research

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
backend/: indexer.py  models.py  pipelines.py  processor.py  search_engine_translator.py  server.py
backend/es/: config.py  indexer.py  pipelines.py  processors.py  request_builder.py  response_handler.py  search_engine_translator.py  searcher.py
backend/es/templates/: aggs_template.py  default_query_template.py  query_template.py
backend/templates/: search_results_template.py
backend/vespa/: config.py  indexer.py  processor.py  request_builder.py  response_handler.py  search_engine_translator.py  searcher.py
config/es/: config.toml
config/vespa/: config.toml
docs/: README.md
docs/vespa/: README.md  sample.json
frontend/: package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  connector.js
notebooks/: README.md
notebooks/es/: sample-usage.ipynb
notebooks/vespa/: sample-usage.ipynb
schema/es/: product-index-schema.json  product-raw-index-schema.json
schema/vespa/: services.xml
schema/vespa/schemas/: product.sd
tests/backend/: test_processor.py
tests/backend/es/: test_request_builder.py  test_response_handler.py  test_search_engine_translator.py
tests/backend/templates/: test_search_results_template.py
tests/backend/vespa/: test_request_builder.py  test_response_handler.py  test_search_engine_translator.py
tests/data/es/: es_request.json  es_request_with_post_filter.json  es_response.json  es_response_with_post_filter.json
tests/data/search-ui/: search_request.json  search_response.json
tools/: bulk-index-products.py  extract-esci-s.py  extract-products.py  make-extra-data.py  make-extra-products-data.py
tools/es/: bulk-index-products.py
