[tool.poetry]
name = "search-research"
version = "0.1.0"
description = "Research search engine project with esci/esci-s data"
authors = ["Jun Ohtani <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "search_research"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
datasets = "^2.13.1"
transformers = "^4.30.2"
sentence-transformers = "^2.2.2"
elasticsearch = "^8.8.0"
jupyterlab = "^4.0.2"

[tool.poetry.group.dev.dependencies]
ipywidgets = "^8.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
