[tool.poetry]
name = "search-research"
version = "0.1.0"
description = "Research search engine project with esci/esci-s data"
authors = ["Jun Ohtani <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "search_research"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
datasets = "^2.13.1"
transformers = "^4.30.2"
sentence-transformers = "^2.2.2"
elasticsearch = "^8.8.0"
jupyterlab = "^4.0.2"
japanese-clip = {git = "https://github.com/rinnakk/japanese-clip.git"}

[tool.poetry.group.dev.dependencies]
ipywidgets = "^8.0.6"
pre-commit = "^3.3.3"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
filter_files = true
multi_line_output = 3

[tool.flake8]
max_line_length = 120

[tool.mypy]
ignore_missing_imports = true
files = ["backend", "tools"]