[tool.poetry]
name = "search-research"
version = "0.1.0"
description = "Research search engine project with esci/esci-s data"
authors = ["Jun Ohtani <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "search_research"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
datasets = "^2.13.1"
transformers = "^4.30.2"
sentence-transformers = "^2.2.2"
elasticsearch = "^8.8.0"
japanese-clip = {git = "https://github.com/rinnakk/japanese-clip.git"}
fastapi = "^0.100.1"
uvicorn = "^0.23.1"
pep8-naming = "^0.13.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
mypy = "^1.4.1"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
flake8-pyproject = "^1.2.3"
ipykernel = "^6.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
filter_files = true
multi_line_output = 3

[tool.flake8]
max_line_length = 180

[tool.mypy]
ignore_missing_imports = true
files = ["backend", "tools"]